[tool.poetry]
name = "dingo-fabrics"
version = "0.1.0"
description = "Optimization Fabrics motion planning for Clearpath Dingo."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
readme = "README.md"
packages = [{include = "dingo_fabrics"}]

[tool.poetry.dependencies]
python = "^3.8,<3.10"
fabrics = "^0.8.2"
urdfenvs = "^0.8.6"
forwardkinematics = "^1.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.5"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
